[package]
name = "pydfing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "pydfing"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.22.0"
pdf-ing = { git = "https://github.com/ChristianPavilonis/pdf-ing" }
